--- a/Spark/3_data_inputs_and_outputs.ipynb
+++ b/Spark/3_data_inputs_and_outputs.ipynb
@@ -58,15 +58,19 @@
     {
      "data": {
       "text/plain": [
-       "[('spark.driver.host', 'e3124d508aef'),\n",
-       " ('spark.app.name', 'Our first Python Spark SQL example'),\n",
+       "[('spark.app.name', 'Our first Python Spark SQL example'),\n",
        " ('spark.rdd.compress', 'True'),\n",
+       " ('spark.app.id', 'local-1631365882877'),\n",
        " ('spark.serializer.objectStreamReset', '100'),\n",
        " ('spark.master', 'local[*]'),\n",
+       " ('spark.driver.port', '51076'),\n",
+       " ('spark.submit.pyFiles', ''),\n",
+       " ('spark.app.startTime', '1631365882215'),\n",
        " ('spark.executor.id', 'driver'),\n",
        " ('spark.submit.deployMode', 'client'),\n",
-       " ('spark.driver.port', '44045'),\n",
-       " ('spark.app.id', 'local-1631081032699'),\n",
+       " ('spark.sql.warehouse.dir',\n",
+       "  'file:/Users/zacks/Desktop/Data%20Science%20Projects/Udacity-Spark/Spark/spark-warehouse/'),\n",
+       " ('spark.driver.host', 'zacks-mbp-16.lan'),\n",
        " ('spark.ui.showConsoleProgress', 'true')]"
       ]
      },
@@ -94,11 +98,11 @@
        "        <div>\n",
        "            <p><b>SparkContext</b></p>\n",
        "\n",
-       "            <p><a href=\"http://e3124d508aef:4040\">Spark UI</a></p>\n",
+       "            <p><a href=\"http://zacks-mbp-16.lan:4046\">Spark UI</a></p>\n",
        "\n",
        "            <dl>\n",
        "              <dt>Version</dt>\n",
-       "                <dd><code>v2.4.3</code></dd>\n",
+       "                <dd><code>v3.1.1</code></dd>\n",
        "              <dt>Master</dt>\n",
        "                <dd><code>local[*]</code></dd>\n",
        "              <dt>AppName</dt>\n",
@@ -110,7 +114,7 @@
        "        "
       ],
       "text/plain": [
-       "<pyspark.sql.session.SparkSession at 0x7f3cb750f9e8>"
+       "<pyspark.sql.session.SparkSession at 0x15a0eb220>"
       ]
      },
      "execution_count": 4,
@@ -309,27 +313,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Row(artist='Showaddywaddy', auth='Logged In', firstName='Kenneth', gender='M', itemInSession='112', lastName='Matthews', length='232.93342', level='paid', location='Charlotte-Concord-Gastonia, NC-SC', method='PUT', page='NextSong', registration='1509380319284', sessionId='5132', song='Christmas Tears Will Fall', status='200', ts='1513720872284', userAgent='\"Mozilla/5.0 (Windows NT 6.1) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/36.0.1985.125 Safari/537.36\"', userId='1046'),\n",
+       " Row(artist='Lily Allen', auth='Logged In', firstName='Elizabeth', gender='F', itemInSession='7', lastName='Chase', length='195.23873', level='free', location='Shreveport-Bossier City, LA', method='PUT', page='NextSong', registration='1512718541284', sessionId='5027', song='Cheryl Tweedy', status='200', ts='1513720878284', userAgent='\"Mozilla/5.0 (Windows NT 6.1) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/36.0.1985.143 Safari/537.36\"', userId='1000')]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "user_log_2.take(2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------+\n",
+      "|userID|\n",
+      "+------+\n",
+      "|  1046|\n",
+      "|  1000|\n",
+      "|  2219|\n",
+      "|  2373|\n",
+      "|  1747|\n",
+      "|  1747|\n",
+      "|  1162|\n",
+      "|  1061|\n",
+      "|   748|\n",
+      "|   597|\n",
+      "|  1806|\n",
+      "|   748|\n",
+      "|  1176|\n",
+      "|  2164|\n",
+      "|  2146|\n",
+      "|  2219|\n",
+      "|  1176|\n",
+      "|  2904|\n",
+      "|   597|\n",
+      "|   226|\n",
+      "+------+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "user_log_2.select(\"userID\").show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Row(artist='Showaddywaddy', auth='Logged In', firstName='Kenneth', gender='M', itemInSession='112', lastName='Matthews', length='232.93342', level='paid', location='Charlotte-Concord-Gastonia, NC-SC', method='PUT', page='NextSong', registration='1509380319284', sessionId='5132', song='Christmas Tears Will Fall', status='200', ts='1513720872284', userAgent='\"Mozilla/5.0 (Windows NT 6.1) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/36.0.1985.125 Safari/537.36\"', userId='1046')]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "user_log_2.take(1)"
    ]
@@ -351,9 +411,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.9.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
