--- a/Spark/2_spark_maps_and_lazy_evaluation.ipynb
+++ b/Spark/2_spark_maps_and_lazy_evaluation.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,6 +53,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pyspark.rdd.RDD"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(distributed_song_log)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -61,9 +81,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'havana'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def convert_song_to_lowercase(song):\n",
     "    return song.lower()\n",
@@ -80,9 +111,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "PythonRDD[1] at RDD at PythonRDD.scala:53"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "distributed_song_log.map(convert_song_to_lowercase)"
    ]
@@ -100,9 +142,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['despacito',\n",
+       " 'nice for what',\n",
+       " 'no tears left to cry',\n",
+       " 'despacito',\n",
+       " 'havana',\n",
+       " 'in my feelings',\n",
+       " 'nice for what',\n",
+       " 'despacito',\n",
+       " 'all the stars']"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "distributed_song_log.map(convert_song_to_lowercase).collect()"
    ]
@@ -116,9 +177,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Despacito',\n",
+       " 'Nice for what',\n",
+       " 'No tears left to cry',\n",
+       " 'Despacito',\n",
+       " 'Havana',\n",
+       " 'In my feelings',\n",
+       " 'Nice for what',\n",
+       " 'despacito',\n",
+       " 'All the stars']"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "distributed_song_log.collect()"
    ]
@@ -134,18 +214,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['despacito',\n",
+       " 'nice for what',\n",
+       " 'no tears left to cry',\n",
+       " 'despacito',\n",
+       " 'havana',\n",
+       " 'in my feelings',\n",
+       " 'nice for what',\n",
+       " 'despacito',\n",
+       " 'all the stars']"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "distributed_song_log.map(lambda song: song.lower()).collect()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['despacito',\n",
+       " 'nice for what',\n",
+       " 'no tears left to cry',\n",
+       " 'despacito',\n",
+       " 'havana',\n",
+       " 'in my feelings',\n",
+       " 'nice for what',\n",
+       " 'despacito',\n",
+       " 'all the stars']"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "distributed_song_log.map(lambda x: x.lower()).collect()"
    ]
@@ -167,9 +285,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.9.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
