--- a/Spark/6_dataframe_quiz_solution.ipynb
+++ b/Spark/6_dataframe_quiz_solution.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,18 +53,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "root\n",
+      " |-- artist: string (nullable = true)\n",
+      " |-- auth: string (nullable = true)\n",
+      " |-- firstName: string (nullable = true)\n",
+      " |-- gender: string (nullable = true)\n",
+      " |-- itemInSession: long (nullable = true)\n",
+      " |-- lastName: string (nullable = true)\n",
+      " |-- length: double (nullable = true)\n",
+      " |-- level: string (nullable = true)\n",
+      " |-- location: string (nullable = true)\n",
+      " |-- method: string (nullable = true)\n",
+      " |-- page: string (nullable = true)\n",
+      " |-- registration: long (nullable = true)\n",
+      " |-- sessionId: long (nullable = true)\n",
+      " |-- song: string (nullable = true)\n",
+      " |-- status: long (nullable = true)\n",
+      " |-- ts: long (nullable = true)\n",
+      " |-- userAgent: string (nullable = true)\n",
+      " |-- userId: string (nullable = true)\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "df.printSchema()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Logout\n",
+      "Error\n",
+      "Upgrade\n",
+      "Downgrade\n",
+      "Submit Downgrade\n",
+      "NextSong\n",
+      "Settings\n",
+      "Submit Upgrade\n",
+      "Save Settings\n"
+     ]
+    }
+   ],
    "source": [
     "# filter for users with blank user id\n",
     "blank_pages = df.filter(df.userId == '') \\\n",
@@ -108,9 +151,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "462"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df.filter(df.gender == 'F') \\\n",
     "    .select('userId', 'gender') \\\n",
@@ -129,9 +183,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------+-----------+\n",
+      "|  Artist|Artistcount|\n",
+      "+--------+-----------+\n",
+      "|Coldplay|         83|\n",
+      "+--------+-----------+\n",
+      "only showing top 1 row\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "df.filter(df.page == 'NextSong') \\\n",
     "    .select('Artist') \\\n",
@@ -154,9 +222,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------------------+\n",
+      "|avg(count(period))|\n",
+      "+------------------+\n",
+      "| 6.898347107438017|\n",
+      "+------------------+\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# TODO: filter out 0 sum and max sum to get more exact answer\n",
     "\n",
@@ -177,6 +258,13 @@
     "    .agg({'period':'count'}) \\\n",
     "    .agg({'count(period)':'avg'}).show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -195,9 +283,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.9.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
